Removed the attribution links for the icons, because these icons are not used in this theme. Attempt to fix a minor bug in the wrappable flexbox last row height.
FossilOrigin-Name: abdfc1d4b209f5af9286b29c7b12b96222c1acfa

--- a/www/templates/Modern/common.less
+++ b/www/templates/Modern/common.less
@@ -50,7 +50,6 @@ body {
 
   &>* {
     margin: @marginY @marginX;
-    overflow: hidden;
   }
 }
 
